--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
   <meta charset="utf-8">
   <title>Swiper demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-  
-  <link href="https://fonts.googleapis.com/css?family=Philosopher&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Philosopher&display=swap" rel="stylesheet">
   <!-- Link Swiper's CSS -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
   <!-- slick -->
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <!-- animate -->
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css"/>
+
 
   <!-- Demo styles -->
   <style>
     html, body {
       position: relative;
       height: 100%;
+      font-size: 13px;
     }
     body {
       background: #eee;
-      font-family: 'Philosopher', sans-serif;
-      font-size: 14px;
-      color:#000;
+      font-family: 'Philosopher';
+      color: #000;
       margin: 0;
       padding: 0;
     }
@@ -79,57 +82,129 @@
     }
 
     .sw1-sl1 {
-      background: url("ren02_v3-1.jpg");
-      -webkit-background-size: cover;
+      background: url("ren02_v3-1.jpg") no-repeat center;
       background-size: cover;
     }
     .sw1-sl2 {
-      background: url("slider_001-2.jpg");
-      -webkit-background-size: cover;
+      background: url("slider_001-2.jpg") no-repeat center;
       background-size: cover;
     }
     .sw1-sl3 {
-      background: url("slider_003-1-1.jpg");
-      -webkit-background-size: cover;
+      background: url("slider_003-1-1.jpg") no-repeat center;
       background-size: cover;
     }
-    .sw1 h2 {
+    .sw1-text{
       position: absolute;
+      right: 0;
       z-index: 5;
-      color: white;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding-top: 3.125rem;
+      background: none;
+      text-shadow: 0 0.1875rem 0.3125rem rgba(0,0,0,.5);
+      color: #ffffff;
+      text-align: right;
     }
 
+    .sw1-text .title {
+      font-size: 5rem;
+      line-height: 6.0625rem;
+      letter-spacing: 0.0625rem;
+      margin: 0 5rem 0 0;
+    }
+
+    .sw1-text .subtitle {
+      font-size: 2.375rem;
+      line-height: 2.875rem;
+      letter-spacing: 0.0625rem;
+      margin: 0 5rem 0 0;
+    }
+    .sw1-arrow {
+      position: absolute;
+      top: 75%;
+      left: auto; 
+      right: 6%;
+    }
+    .sw1-arrow-prev {
+      right: 88%;  
+    }
+
+   /* .sw1-sl1 .swiper-button-next:after, .swiper-button-prev:after {
+
+    }*/
+
+
+
     /*slider 2 */
-    .sw2-wrapp {
+   /* .sw2-wrapp {
       width: 40%;
       top: 0;
       right: 0;
       height: 100%;
       z-index: 5;
       position: absolute;
-      background: #ebedec;
+      /*background: #ebedec;
+    }*/
+    .sw2 {
+      width: 60%;
+
     }
-    .sw2-block {
+    .sw2-block-wrapp {
+      position: absolute;
       right: 0;
       height: 100%;
-      position: absolute;
-      z-index: 99;
+      z-index: 5;
       width: 40%;
+      background: #ebedec url('pattern_tolshe.svg');
     }
+    .sw2-block {
+      position: relative;
+      padding: 30% 15% 30% 15%;
+    }
+    .sw2-block .title-block {
+      position: relative;
+      font-size: 2.625rem;
+      letter-spacing: .84px;
+      color: #3b3839;
+      padding: 0;
+      margin: 0;
+      line-height: 1;
+    }
+   /* .sw2-block .title-block::after {
+      content: "";
+      position: absolute;
+      bottom: : 0;
+      right: 0;
+      left: 0;
+      text-align: center;
+      width: 70%;
+      height: 3px;
+      background-color: red;
+    }*/
+
+
     .sw2-sl1 {
-      background: url("img_0112.jpg");
-      -webkit-background-size: contain;
+      background: url("img_0112.jpg") no-repeat;
       background-size: contain;
     }
     .sw2-sl2 {
-      background: url("block_2_img_001-2-1.jpg");
-      -webkit-background-size: contain;
+      background: url("block_2_img_001-2-1.jpg") no-repeat;
       background-size: contain;
     }
     .sw2-sl3 {
-      background: url("web-1920-–-3-1-1.jpg");
-      -webkit-background-size: contain;
+      background: url("web-1920-–-3-1-1.jpg") no-repeat;
       background-size: contain;
+    }
+    .sw2-pagination-wrap {
+      width: 30%;
+      position: absolute;
+      top: 90%;
+      right: 5%;
+    }
+    .sw2-pagination-wrap .swiper-pagination {
+      width: 100%;
     }
 
     /*slider 3*/
@@ -138,13 +213,29 @@
       position: absolute;
       right: 0;
     }
-    .sw3-block {
+    .sw3-block-wrapp {
+      width: 40%;
+      position: absolute;
       left: 0;
       height: 100%;
-      position: absolute;
       z-index: 5;
-      width: 40%;
-      background: #ebedec;
+      background: #ebedec url('pattern_tolshe.svg');
+    }
+    .sw3-block {
+      position: relative;      
+      padding: 30% 15% 30% 15%;
+    }
+    .sw3-block h2 {
+      margin: 0;
+      padding: 0;
+      color: #3b3839;
+    }
+    .sw3-block p {
+      font-family: 'Montserrat', sans-serif;
+      color: #474344;
+      font-size: 13px;
+      line-height: 24px;
+      letter-spacing: .15px;
     }
     .sw3-sl1 {
       background: url("lobby_3.jpg");
@@ -161,6 +252,82 @@
       -webkit-background-size: contain;
       background-size: contain;
     }
+    .sw3-pagination-wrap {
+      width: 60%;
+      position: absolute;
+      right: 0;
+      bottom: 5%;
+    }
+    .sw3-pagination-wrap .swiper-pagination {
+      position: relative;
+      width: 100%;
+
+    }
+
+
+
+    /*arrow icon*/
+    .swiper-button-next {
+      width: 73px;
+    }
+    .swiper-button-next::after {
+      content: "";
+      background: url("pravo-1.svg");
+      width: 73px;
+      height: 39px;
+      position: absolute;
+      right: 0;
+      background-repeat: no-repeat;
+    }
+    .swiper-button-next:hover::after {
+      transform: scale(1.1,1) translate3d(0.625rem,0,0) !important;
+      /*animation: animateRight .8s ease both 1s;*/
+    }
+    .swiper-button-prev {
+      width: 73px;
+    }
+    .swiper-button-prev::after {
+      content: "";
+      background: url("levo-1.svg");
+      width: 73px;
+      height: 39px;
+      position: absolute;
+      left: 0;
+      background-repeat: no-repeat;
+    }
+    .swiper-button-prev:hover::after {
+      transform: scale(1.1,1) translate3d(-0.625rem,0,0) !important;
+      /*animation: animateLeft .8s ease both 1s;*/
+    }
+   /* @keyframes animateRight {
+      0% {
+          -webkit-transform: translate3d(-12.5rem,0,0);
+          transform: translate3d(-12.5rem,0,0);
+          opacity: 0
+      }
+
+      100% {
+          -webkit-transform: translate3d(0,0,0);
+          transform: translate3d(0,0,0);
+          opacity: 1
+      }
+    }
+    @keyframes animateLeft {
+      0% {
+          -webkit-transform: translate3d(12.5rem,0,0);
+          transform: translate3d(12.5rem,0,0);
+          opacity: 0
+      }
+
+      100% {
+          -webkit-transform: translate3d(0,0,0);
+          transform: translate3d(0,0,0);
+          opacity: 1
+      }
+    }*/
+
+
+
   </style>
 </head>
 <body>
@@ -170,7 +337,10 @@
       
       <div class="swiper-slide">
         <div class="swiper-container swiper-container-h sw1">
-          <h2>Престижный <br> жилой комплекс премиум-класса <br>  в Сокольниках</h2>
+          <div class="sw1-text">
+            <span class="title">Престижный</span>
+            <span class="subtitle">жилой комплекс премиум-класса <br>  в Сокольниках</span>
+          </div>
           <div class="sw1-svg-wrap">
             <div class="sw1-svg-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="32.695" height="17.27" viewBox="0 0 32.695 17.27"> <g id="next" transform="translate(32.695 -112.557) rotate(90)"> <path id="Path_12655" data-name="Path 12655" d="M129.56,15.7,114.137.272a.925.925,0,1,0-1.309,1.309l14.766,14.766L112.828,31.112a.928.928,0,0,0,.651,1.583.9.9,0,0,0,.651-.274L129.553,17A.92.92,0,0,0,129.56,15.7Z" fill="#fff"></path> </g> </svg>
@@ -183,56 +353,67 @@
           </div>
           <!-- <div class="swiper-pagination swiper-pagination-v"></div> -->
           <!-- Add Arrows -->
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next sw1-arrow sw1-arrow-next"></div>
+          <div class="swiper-button-prev sw1-arrow sw1-arrow-prev"></div>
         </div>
       </div>
 
       <div class="swiper-slide">
         <div class="swiper-container swiper-container-h">
-          <div class="sw2-wrapp"></div>
-          <div class="swiper-wrapper">
+          <div class="swiper-wrapper sw2">
             <div class="swiper-slide sw2-sl1">
-              <div class="sw2-block">
+              <div class="sw2-block-wrapp">
+                 <div class="sw2-block">
                 <h2 class="title-block">Террасы на крыше</h2>
                 <p>Собственный пентхаус с террасой на крыше – мечта для тех, кто ценит эксклюзивность и привык получать от жизни истинное удовольствие. Только представьте: вы наслаждаетесь восхитительными видами на исторический центр столицы за чашечкой кофе и вдыхаете свежий воздух свободы, комфорта и уединения.  Здесь вы почувствуете спокойствие и непередаваемый уют.</p>
               </div>
+              </div>
             </div>
             <div class="swiper-slide sw2-sl2">
-              <div class="sw2-block">
-                <h2 class="title-block">Подземный паркинг</h2>
-                <p>Для удобства жителей и гостей жилого комплекса «Ренессанс» предусмотрены два собственных подземных двухэтажных паркинга общей вместимостью 502 парковочных места. Заезд на парковку осуществляется посредством бесконтактной системы распознавания номеров, а также специального пульта управления. Благодаря продуманному расположению лифтов резиденты жилого комплекса могут спуститься в паркинг прямо из здания</p>
+              <div class="sw2-block-wrapp">
+                <div class="sw2-block">
+                  <h2 class="title-block">Подземный паркинг</h2>
+                  <p>Для удобства жителей и гостей жилого комплекса «Ренессанс» предусмотрены два собственных подземных двухэтажных паркинга общей вместимостью 502 парковочных места. Заезд на парковку осуществляется посредством бесконтактной системы распознавания номеров, а также специального пульта управления. Благодаря продуманному расположению лифтов резиденты жилого комплекса могут спуститься в паркинг прямо из здания</p>
+                </div>
               </div>
             </div>
             <div class="swiper-slide sw2-sl3">
-              <div class="sw2-block">
-                <h2>Фитнес-клуб</h2>
-                <p>Стараясь позаботиться не только о комфорте жителей, но и об их здоровом образе жизни, мы создали собственный закрытый фитнес-клуб, расположенный прямо на территории жилого комплекса. Занятия спортом больше не будут отнимать много времени – все необходимое для поддержания себя в форме есть в вашем доме!</p>
+              <div class="sw2-block-wrapp">
+                <div class="sw2-block">
+                  <h2 class="title-block">Фитнес-клуб</h2>
+                  <p>Стараясь позаботиться не только о комфорте жителей, но и об их здоровом образе жизни, мы создали собственный закрытый фитнес-клуб, расположенный прямо на территории жилого комплекса. Занятия спортом больше не будут отнимать много времени – все необходимое для поддержания себя в форме есть в вашем доме!</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="swiper-pagination swiper-pagination-h"></div>
-          <!-- Add Arrows -->
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
+          <div class="sw2-pagination-wrap">
+            <div class="swiper-pagination swiper-pagination-h"></div>
+            <!-- Add Arrows -->
+            <div class="swiper-button-next sw2-arrow sw2-arrow-next"></div>
+            <div class="swiper-button-prev sw2-arrow sw2-arrow-prev"></div>
+          </div>
         </div>
       </div>
 
       <div class="swiper-slide">
         <div class="swiper-container swiper-container-h">
-          <div class="sw3-block">
-            <h2>Ваш дом</h2>
-            <p>Что для вас является эталоном настоящего дома? Практичность и функциональность, эстетика и прекрасный вкус архитектора, удобное расположение и наличие необходимой инфраструктуры, престиж и респектабельность. Представьте, что все эти параметры совмещены в одном месте – ЖК Ренессанс.</p>
+          <div class="sw3-block-wrapp">
+            <div class="sw3-block">
+              <h2>Ваш дом</h2>
+              <p>Что для вас является эталоном настоящего дома? Практичность и функциональность, эстетика и прекрасный вкус архитектора, удобное расположение и наличие необходимой инфраструктуры, престиж и респектабельность. Представьте, что все эти параметры совмещены в одном месте – ЖК Ренессанс.</p>
+            </div>
           </div>
           <div class="swiper-wrapper sw3">
             <div class="swiper-slide sw3-sl1"></div>
             <div class="swiper-slide sw3-sl2"></div>
-            <div class="swiper-slide sw3-sl3">s</div>
+            <div class="swiper-slide sw3-sl3"></div>
           </div>
-          <div class="swiper-pagination swiper-pagination-h"></div>
+          <div class="sw3-pagination-wrap">
+            <div class="swiper-pagination swiper-pagination-h"></div>
           <!-- Add Arrows -->
           <!-- <div class="swiper-button-next"></div> -->
           <!-- <div class="swiper-button-prev"></div> -->
+          </div>
         </div>
       </div>
 
@@ -253,6 +434,7 @@
     var swiperV = new Swiper('.swiper-container-v', {
       direction: 'vertical',
       slidesPerView: 1,
+      speed: 1000,
       spaceBetween: 30,
       mousewheel: true,
       pagination: {
@@ -261,15 +443,37 @@
       } 
     });
 
+    // pagination: '.swiper-pagination',
+    //     nextButton: '.swiper-button-next',
+    //     prevButton: '.swiper-button-prev',
+    //     paginationClickable: true,
+    //     spaceBetween: 30,
+    //     centeredSlides: true,
+    //     autoplay: 5500,
+    //     loop: true,
+    //     autoplayDisableOnInteraction: false
+
     var swiperH = new Swiper('.swiper-container-h', {
-      spaceBetween: 50,
+      spaceBetween: 30,
+      slidesPerView: 'auto',
+      loop: true,
+      centeredSlides: true,
+      effect: 'fade',
+      fadeEffect: {
+        crossFade: true
+      },
+      autoplay: {
+        delay: 2500,
+        disableOnInteraction: false,
+        // autoplayDisableOnInteraction: true,
+      },
       pagination: {
         el: '.swiper-pagination-h',
         clickable: true,
       },
       navigation: {
         nextEl: '.swiper-button-next',
-        prevEl: '.swiper-button-prev',
+        prevEl: '.swiper-button-prev'
       }
     });
 
