--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
     </ul>
   </header>
 
+  <div class="intro">
+    <div class="video">
+        <video src="http://mirrors.standaloneinstaller.com/video-sample/jellyfish-25-mbps-hd-hevc.mp4" autoplay muted loop></video>
+    </div>
+  </div>
+
   <div id="fullpage">
       <section class="section home" id="section0">
           <div class="home__inner">
@@ -44,6 +50,57 @@
       <section class="section about" id="section1">
         <div class="about__inner">
           <h3>About</h1>
+          <div class="works">
+            <div class="work-1">
+              <span>2019</span>
+              <span>IP5 agency</span>
+              <span>Верстальщик, Интегратор</span>
+              <span>Создание и поддержка интернет магазинов на платформе CS-Cart</span>
+              <span>Симферополь, ip-5.ru</span>
+            </div>
+            <div class="work-2">
+              <span>2018</span>
+              <span>SiteUP</span>
+              <span>Web-Разработчик/верстальщик</span>
+              <span>Верстка и нарезка PSD макетов под CMS WordPress</span>
+              <span>Симферополь, siteup.ru</span>
+            </div>
+          </div>
+          
+          <h4>Ключевые навыки</h4>
+          <ul>
+            <span>HTML5</span>
+            <span>CSS3</span>
+            <span>JavaScript</span>
+            <span>Git</span>
+            <span>Less</span>
+            <span>Sass</span>
+            <span>CMS Wordpress</span>
+            <span>Bootstrap</span>
+            <span>Кроссбраузерная верстка</span>
+            <span>FTP</span>
+            <span>Adobe Photoshop</span>
+            <span>Figma</span>
+            <span>MySQL</span>
+            <span>Gulp</span>
+            <span>Webpack</span>
+            <span>Flex</span>
+            <span>Grid</span>
+          </ul>
+
+          <h4>Обо мне:</h4>
+          <ul>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>Кросс-браузерная верстка, aдаптивная верста</li>
+            <li>Перенос доменов. Перенос сайтов на хостинг</li>
+            <li>Верстка лэндингов, магазинов</li>
+            <li>Знание Sass,Scss,Stylus,Less,Jade,Pug</li>
+            <li>Умение работать со сборщиком Gulp</li>
+            <li>Умение работать с системами контроля версий Git</li>
+            <li>Опыт работы в команде, работа с чужим кодом</li>
+            <li>И самое главное желание профессионально развиваться</li>
+          </ul>
         </div>  
       </section>
       <section class="section portfolio" id="section2">
