--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li class="menu__item" data-menuanchor="home"><a href="#home">Home</a></li>
       <li class="menu__item" data-menuanchor="about"><a href="#about">About</a></li>
       <li class="menu__item" data-menuanchor="portfolio"><a href="#portfolio">Portfolio</a></li>
-      <li class="menu__item" data-menuanchor="contact"><a href="#contact">Contact</a></li>
+      <!-- <li class="menu__item" data-menuanchor="contact"><a href="#contact">Contact</a></li> -->
     </ul>
   </header>
 
@@ -40,8 +40,8 @@
           <div class="home__inner">
             <div class="main">
               <h2 class="main__title">Alexandr Karpovich</h2>
-              <h4 class="main__subtitle">Frontend developer</h4>
-              <div class="main__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus asperiores earum quis consequuntur nostrum placeat provident voluptatibus corrupti facere itaque.</div>
+              <h4 class="main__subtitle">Web - developer</h4>
+              <div class="main__text">I like to code and want to develop in it direction</div>
               <div class="main__btn">
                 <div class="btn"><a href="#about">HIRE ME</a></div>
                 <div class="btn"><a href="#portfolio">MY WORK</a></div>
@@ -67,18 +67,26 @@
               <span>Создание и поддержка интернет магазинов на платформе CS-Cart</span>
               <span>Симферополь, ip-5.ru</span>
             </div>
+            <div class="work-3">
+              <span>2021</span>
+              <span>B2broker</span>
+              <span>web-developer</span>
+              <span>write code</span>
+              <span>Moscow, B2broker.com</span>
+            </div>
           </div>
 
-          <h4>Ключевые навыки</h4>
+          <h5>skills</h5>
           <ul>
             <li>HTML5(Pug/jade) Flex/Grid,  Кроссбраузерная верстка/Адаптивная верстка</li>
             <li>CSS3(Less, Sass/Scss, Stylus)</li>
-            <li>JavaScript</li>
-            <li>CMS(Joomla, Wordpress)</li>
+            <li>JavaScript (es6/jquery)</li>
+            <li>React, vue</li>
+            <li>CMS(Wordpress, Joomla, CS-Cart)</li>
             <li>Перенос доменов. Перенос сайтов на хостинг</li>
-            <li>системами контроля версий Git, работать с GitHub</li>
+            <li>системами контроля версий Git, работать с GitHub, GitLab</li>
             <li>Сборщик Gulp/Webpack</li>
-            <li>Figma, Adobe Photoshop,</li>
+            <li>Figma, Adobe Photoshop</li>
             <li>Php</li>
             <li>MySQL</li>
             <li>Опыт работы в команде, работа с чужим кодом</li>
@@ -87,7 +95,7 @@
         </div>
       </section>
       <section class="section portfolio" id="section2">
-          <div class="slide slide1" id="slide1">
+          <!-- <div class="slide slide1" id="slide1">
             <div class="slide__inner">
               <div class="slide__text">
                 <h3 class="slide__text__title">rocket-test</h3>
@@ -108,9 +116,33 @@
                 <a class="slide__text__link" href="gold-one/index.html">gold-one</a>
               </div>
             </div>
+          </div> -->
+          <div class="slide slide3" id="slide3">
+            <div class="slide__inner">
+              <div class="slide__text">
+                <h3 class="slide__text__title"><a href="https://weather-api-react1.herokuapp.com/">weather-api react</a></h3>
+                <p class="slide__text__txt">react app weather api</p>
+              </div>
+            </div>
+          </div>
+          <div class="slide slide4" id="slide4">
+            <div class="slide__inner">
+              <div class="slide__text">
+                <h3 class="slide__text__title"><a href="https://weather-react-api1.herokuapp.com/">github-finder vue</a></h3>
+                <p class="slide__text__txt">vue app github-finder api</p>
+              </div>
+            </div>
+          </div>
+          <div class="slide slide5" id="slide5">
+            <div class="slide__inner">
+              <div class="slide__text">
+                <h3 class="slide__text__title"><a href="https://weather-react-api1.herokuapp.com/">go</a></h3>
+                <p class="slide__text__txt">go app </p>
+              </div>
+            </div>
           </div>
       </section>
-      <section class="section contact" id="section3">
+      <!-- <section class="section contact" id="section3">
         <div class="contact__inner">
           <div class="contact__wrap  wrap-contact100">
 
@@ -160,7 +192,7 @@
 
           </div>
         </div>
-      </section>
+      </section> -->
   </div>
 
 
@@ -176,6 +208,6 @@
     });
 </script>
 
-    <script src="script.js"></script>
-</<source>
+<script src="script.js"></script>
+
 </html>
